--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     
     <title>Cadastros</title>
   </head>
-  <body>
+  <body style='margin: 0; padding:0'>
     <noscript>Você precisa de javascript para rodar a aplicação.</noscript>
     <div id="root"></div>
     
